# linux-chat

./: .gitignore  CMakeLists.txt  README.md  x.txt
include/: chat_common.h  chat_message.h  cmd.h  controller.h  group.h  m_utils.h  mess_form.h  message.h  request_manager.h  service.h  session.h  ui_controller.h  user.h
src/: CMakeLists.txt  main.c
src/manager/: request_manager.c
src/models/: group.c  mess_form.c  user.c
src/network/: controller.c  message.c  service.c  session.c
src/ui/: Login.c  Register.c  chat_app.c  create_group.c  join_group.c  pop_up_create_group.c  pop_up_join_group.c  pop_up_notification.c  ui_controller.c  ui_home.c  ui_login.c  ui_register.c
src/utils/: log.c  utils.c
